<resources>
    <string name="app_name">College Todo List</string>
    <string name="textViewAssignment">null</string>
    <string name="textViewNewAssignment">New Assignment</string>
    <string name="editTitle">Title</string>
    <string name="btnAdd">Add</string>
    <string name="btnNevermind">Nevermind</string>
    <string name="btnCalandarAdd">Add to Calendar</string>
    <string name="editDate">mm-dd-yyyy</string>
</resources>
